3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Add patch by Kevin Rudat for applyable but non
pickable objects to have item items.
doc/Dvelopers/objects: Update item types.
socket/item.c: Use the head of any objects we send.  Should generally
   only be an issue for objects on the ground, as currently there is no
   large objects players can pick up.  Also fix up some of the formatting/
   indenting in this file.
MSW 2005-08-16

server/attack.c, include/define.h, common/loader.l doc/Developers/objects:
Add a flag FLAG_IS_LIGHTABLE, to make lightable objects such as lanterns
able to work again
lib/archetypes: recollect archs
Brendan Lally 2005-08-16

server/build_map.c: Add support for buildable signs, and magic mouths/ears.
Alex Schultz 2005-08-15

lib/Makefile.am, lib/Makefile.in: Actually install help file for showpets.
common/living.c, include/living.h: Make global arrays really const.
Andreas Kirschbaum 2005-08-15

server/gods.c: Fix crash for monsters without appropriate god.
server/gods.c: Add missing braces around body of if statement.
Andreas Kirschbaum 2005-08-14

NPCs instead of being given a random god are for preference given the god that 
likes their race. If one can't be found, then we fall back to a random god.
Affected files:
server/gods.c include/sproto.h
Brendan Lally 2005-08-12

String fields in structures using add_string are now const char*. Functions in
 shstr (add_refcount, add_string, free_string, ...) now take/return const char*.
More argument replacing from char* to const char*.
Fixed a potential string corruption in recipe.c (when dumping) and readable.c (was
 using strtok on a add_string-ed string, when strtok changes argument).