@@ -249,8 +249,8 @@ int check_infection(object *disease) {
     }
 
     if(map == NULL) return 0;
-    for(i=x-range;i<x+range;i++) {
-	for(j=y-range;j<y+range;j++) {
+    for(i=x-range;i<=x+range;i++) {
+	for(j=y-range;j<=y+range;j++) {
 	    mflags = get_map_flags(map,&map2, i,j, &i2, &j2);
 	    if (!(mflags & P_OUT_OF_MAP) && (mflags & P_IS_ALIVE)) {
 		for(tmp=get_map_ob(map2,i2,j2);tmp;tmp=tmp->above) {
