@@ -17,6 +17,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+The following fix code that basically does "for(x = pos-5; x < pos+5; x++)".
+This is not correct because it includes "pos-5" but not "pos+5".
+common/los.c: Make lighted distance equal in all directions.
+server/disease.c: Make infection distance equal in all directions.
+server/monster.c: Make lighted distance equal in all directions.
+Andreas Kirschbaum 2005-08-17
+
 Add patch by Kevin Rudat for applyable but non
 pickable objects to have item items.
 doc/Dvelopers/objects: Update item types.
